--- a/config.yaml
+++ b/config.yaml
@@ -5,6 +5,15 @@ model_type: "TinyLlama-1.1B-Chat-v1.0-GGUF"
 
 embeddings_path: "BAAI/bge-large-en-v1.5"
 
-model_config: {"max_new_tokens": 512, "temperature": 0, 'context_length': 4096, 'gpu_layers': 0}
+model_config: 
+  "max_new_tokens": 256
+  "temperature": 0.2
+  'context_length': 4096
+  'gpu_layers': 0
+  'threads': -1
+
+chat_config:
+  chat_memory_length: 2
+  number_of_retrieved_documents: 3
 
 chat_history_path: "chat_sessions/"
